--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.0.0",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "6.1.2",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -37,6 +37,7 @@
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5"
