--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^6.2.0",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "postcss": "^8",
