--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
+    "node-xlsx": "^0.23.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
