Added build URL copy button

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.0.0",
     "next": "14.0.2",
     "react": "^18",
