--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "remark-frontmatter": "5.0.0",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4"
   },
