--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/mdx": "14.0.4",
     "clipboard-copy": "^4.0.1",
     "clsx": "^2.0.0",
+    "html2canvas": "1.4.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
