--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/loader": "3.0.0",
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
+    "@vercel/analytics": "1.1.1",
     "clipboard-copy": "^4.0.1",
     "clsx": "^2.0.0",
     "html2canvas": "1.4.1",
