--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "9.1.3",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4"
   },
