--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "prisma": "5.7.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.1",
