--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "1.0.11",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@mdx-js/loader": "3.0.0",
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
+    "@prisma/client": "5.7.1",
     "@vercel/analytics": "1.1.1",
     "clipboard-copy": "^4.0.1",
     "clsx": "^2.0.0",
     "html2canvas": "1.4.1",
     "next": "14.0.2",
+    "next-auth": "4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "9.1.3",
