Added additional auth providers

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 DATABASE_URL=""
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+REDDIT_CLIENT_ID=""
+REDDIT_CLIENT_SECRET=""
 NEXTAUTH_SECRET=""
 NEXT_PUBLIC_IMAGE_URL=""
