--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "html2canvas": "1.4.1",
     "next": "14.0.2",
+    "next-auth": "4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "9.1.3",
