--- a/package.json
+++ b/package.json
@@ -13,29 +13,31 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.11",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@headlessui/react": "1.7.17",
+    "@heroicons/react": "2.0.18",
     "@mdx-js/loader": "3.0.0",
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
     "@prisma/client": "5.7.1",
     "@vercel/analytics": "1.1.1",
-    "clipboard-copy": "^4.0.1",
-    "clsx": "^2.0.0",
+    "bad-words": "3.0.4",
+    "clipboard-copy": "4.0.1",
+    "clsx": "2.0.0",
     "html2canvas": "1.4.1",
     "next": "14.0.2",
     "next-auth": "4.24.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18",
+    "react-dom": "18",
     "react-toastify": "9.1.3",
-    "usehooks-ts": "^2.9.1",
-    "zod": "^3.22.4"
+    "usehooks-ts": "2.9.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "6.1.2",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/bad-words": "3.0.3",
     "@types/jest": "29.5.5",
     "@types/mdx": "2.0.10",
     "@types/node": "^20",
