--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ REDDIT_CLIENT_SECRET=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 NEXT_PUBLIC_IMAGE_URL=""
+WEBHOOK_COMMUNITY_BUILDS=""
+WEBHOOK_REPORTED_CONTENT=""
