--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,9 @@ NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 NEXT_PUBLIC_IMAGE_URL=""
 CRON_SECRET=""
-POSTMARK_API_TOKEN=""
 WEBHOOK_COMMUNITY_BUILDS=""
 WEBHOOK_REPORTED_CONTENT=""
+KV_REST_API_READ_ONLY_TOKEN=""
+KV_REST_API_TOKEN=""
+KV_REST_API_URL=""
+KV_URL=""
