--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
     "@prisma/client": "5.7.1",
+    "@upstash/ratelimit": "1.0.0",
     "@vercel/analytics": "1.1.1",
+    "@vercel/kv": "1.0.1",
     "@vercel/speed-insights": "1.0.2",
     "bad-words": "3.0.4",
     "clipboard-copy": "4.0.1",
