Squashed commit of the following:
commit a683782060b90d1577b4740e5eff781ae9720fff
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 23:18:10 2023 -0500

    Fixed prisma import bug

commit cb7ddabc9527f8835edd9337c08e3b4b47fbfe5e
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 23:12:39 2023 -0500

    Finished build voting

commit a5547f8201d2b21b8fcec1d2b6051d1d7e549e47
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 22:21:00 2023 -0500

    Small tweak

commit 5c416519d661e4ab96fbbd55577aa8fc11155ae7
Merge: 27e04d0 496167b
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 22:20:53 2023 -0500

    Merge branch 'development' into add-build-voting

commit 27e04d0a26fe7b2f2f72f3bde161b5c425b51e05
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 22:12:28 2023 -0500

    Improved total upvotes appearance

commit 7fbaa6bae8d462b52b33fd78ed6cc5dd913d0765
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 21:54:07 2023 -0500

    Added favorite vote display

commit cb05bc476fa5f7640aecc26798aa40102978dd65
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 21:53:57 2023 -0500

    Fixed issue with rate limiting

commit bce1b1a9bb6d6a1f914f6ceb512f7be760ddb11f
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 21:25:15 2023 -0500

    Build creator now always favorites build

commit 7f17547fac91a2f980b41e01619864d5e18a4d53
Merge: dd67100 54b5ed5
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 20:43:29 2023 -0500

    Merge branch 'development' into add-build-voting

commit dd671007a8a4378372d945b5b337755a68ac597b
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Dec 27 17:44:38 2023 -0500

    R

--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,10 @@ REDDIT_CLIENT_SECRET=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 NEXT_PUBLIC_IMAGE_URL=""
+CRON_SECRET=""
 WEBHOOK_COMMUNITY_BUILDS=""
 WEBHOOK_REPORTED_CONTENT=""
+KV_REST_API_READ_ONLY_TOKEN=""
+KV_REST_API_TOKEN=""
+KV_REST_API_URL=""
+KV_URL=""
