Squashed commit of the following:
commit aa7d00f59416aabf05027c1bb71b7ee2305b855f
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 21:56:38 2023 -0500

    Finalized filter placement

commit 0cfd1f242064fd0c74f3c692eb8baab127f72a11
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 21:31:58 2023 -0500

    .

commit 610780fdd5b4e7fd7c316b238121a527fd98aa95
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 21:27:04 2023 -0500

    Fixed issue on tracker where progress was changing with filters

commit 481e541f34a89ef27dde92ab226f36738374f36e
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 21:24:56 2023 -0500

    Added filter for discovered items

commit a247e5f0d532483de445449e4d9b13cde1cdbe89
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 19:14:26 2023 -0500

    Filters now work across pages

commit 4f9463aa3407836d764ef7e92b3741c059461429
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 17:33:50 2023 -0500

    Added initial filters

commit 88817cba51a9a095439775108ed8fc5128458dfa
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 16:03:53 2023 -0500

    Fixed import errors

commit 133d51f9f4d74e681ebf10e1450e152ff0359cbb
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Dec 30 14:27:05 2023 -0500

    Added dlc property to items

--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,7 @@ NEXT_PUBLIC_IMAGE_URL=""
 CRON_SECRET=""
 WEBHOOK_COMMUNITY_BUILDS=""
 WEBHOOK_REPORTED_CONTENT=""
+WEBHOOK_BUG_REPORT=""
 KV_REST_API_READ_ONLY_TOKEN=""
 KV_REST_API_TOKEN=""
 KV_REST_API_URL=""
