--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,8 @@ CRON_SECRET=""
 WEBHOOK_COMMUNITY_BUILDS=""
 WEBHOOK_REPORTED_CONTENT=""
 WEBHOOK_BUG_REPORT=""
+WEBHOOK_CRON_LOGS=""
+PATREON_CLIENT_ID=""
+PATREON_CLIENT_SECRET=""
+PATREON_CREATOR_ACCESS_TOKEN=""
+PATREON_CREATOR_REFRESH_TOKEN=""
