--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "1.4.1",
     "next": "14.0.2",
     "next-auth": "4.24.5",
+    "patreon": "0.4.1",
     "react": "18",
     "react-dom": "18",
     "react-toastify": "9.1.3",
