--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clipboard-copy": "4.0.1",
     "clsx": "2.0.0",
     "html2canvas": "1.4.1",
+    "masonic": "3.7.0",
     "next": "14.0.2",
     "next-auth": "4.24.5",
     "react": "18",
