--- a/package.json
+++ b/package.json
@@ -25,41 +25,41 @@
     "clsx": "2.0.0",
     "html2canvas": "1.4.1",
     "masonic": "3.7.0",
-    "next": "14.0.2",
+    "next": "14.1.0",
     "next-auth": "4.24.5",
     "patreon": "0.4.1",
-    "react": "18",
-    "react-dom": "18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-toastify": "9.1.3",
     "usehooks-ts": "2.9.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/forms": "0.5.7",
     "@testing-library/jest-dom": "6.1.2",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/bad-words": "3.0.3",
     "@types/jest": "29.5.5",
     "@types/mdx": "2.0.10",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "8",
     "eslint-config-next": "14.0.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^6.2.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-testing-library": "6.2.0",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
-    "node-xlsx": "^0.23.0",
-    "postcss": "^8",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
+    "node-xlsx": "0.23.0",
+    "postcss": "8",
+    "prettier": "3.1.0",
+    "prettier-plugin-tailwindcss": "0.5.7",
     "prisma": "5.8.0",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss": "^3.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "tailwind-merge": "2.0.0",
+    "tailwindcss": "3.3.0",
+    "ts-node": "10.9.1",
+    "typescript": "5.3.2"
   }
 }
