--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bad-words": "3.0.4",
     "clipboard-copy": "4.0.1",
     "clsx": "2.0.0",
+    "date-fns": "3.3.1",
     "html2canvas": "1.4.1",
     "masonic": "3.7.0",
     "next": "14.1.0",
