--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
     "@prisma/client": "5.8.0",
+    "@tippyjs/react": "4.2.6",
     "@vercel/analytics": "1.1.1",
     "bad-words": "3.0.4",
     "clipboard-copy": "4.0.1",
