Updated .env.sample and README

--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,18 @@
+# Created by Vercel CLI
+CRON_SECRET=""
 DATABASE_URL=""
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
-REDDIT_CLIENT_ID=""
-REDDIT_CLIENT_SECRET=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 NEXT_PUBLIC_IMAGE_URL=""
-CRON_SECRET=""
-WEBHOOK_COMMUNITY_BUILDS=""
-WEBHOOK_REPORTED_CONTENT=""
-WEBHOOK_BUG_REPORT=""
-WEBHOOK_CRON_LOGS=""
 PATREON_CLIENT_ID=""
 PATREON_CLIENT_SECRET=""
 PATREON_CREATOR_ACCESS_TOKEN=""
 PATREON_CREATOR_REFRESH_TOKEN=""
+REDDIT_CLIENT_ID=""
+REDDIT_CLIENT_SECRET=""
+WEBHOOK_BUG_REPORT=""
+WEBHOOK_COMMUNITY_BUILDS=""
+WEBHOOK_CRON_LOGS=""
+WEBHOOK_REPORTED_CONTENT=""
