--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/loader": "3.0.0",
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
+    "@popperjs/core": "2.11.8",
     "@prisma/client": "5.8.0",
     "@tippyjs/react": "4.2.6",
     "@vercel/analytics": "1.1.1",
@@ -32,6 +33,7 @@
     "patreon": "0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-popper": "2.3.0",
     "react-toastify": "9.1.3",
     "usehooks-ts": "2.9.1",
     "zod": "3.22.4"
