Finalized import logic

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "masonic": "3.7.0",
     "next": "14.1.0",
     "next-auth": "4.24.5",
+    "papaparse": "5.4.1",
     "patreon": "0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,6 +48,7 @@
     "@types/jest": "29.5.5",
     "@types/mdx": "2.0.10",
     "@types/node": "20",
+    "@types/papaparse": "5.3.14",
     "@types/react": "18",
     "@types/react-dom": "18",
     "autoprefixer": "^10.0.1",
