--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "2.0.0",
     "date-fns": "3.3.1",
     "html2canvas": "1.4.1",
+    "lodash.isequal": "4.5.0",
     "masonic": "3.7.0",
     "next": "14.1.0",
     "next-auth": "4.24.5",
@@ -46,6 +47,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/bad-words": "3.0.3",
     "@types/jest": "29.5.5",
+    "@types/lodash.isequal": "4.5.8",
     "@types/mdx": "2.0.10",
     "@types/node": "20",
     "@types/papaparse": "5.3.14",
