--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ CRON_SECRET=""
 DATABASE_URL=""
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+DISCORD_BOT_TOKEN=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 NEXT_PUBLIC_IMAGE_URL=""
