--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-popper": "2.3.0",
     "react-toastify": "9.1.3",
+    "sharp": "0.33.2",
     "usehooks-ts": "2.14.0",
     "zod": "3.22.4"
   },
