Squashed commit of the following:
commit 2d706babf11aee4dbf8cdc747026fe260cfb19c8
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Feb 28 16:37:52 2024 -0500

    Update route.ts

commit da1c685b665c377b077e156cccf86b1a3201ccc2
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Feb 28 16:36:12 2024 -0500

    Finalized ImageKit integration

commit 9e1faca12dec993956d56430ba09dc28eaf2debb
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Feb 28 16:17:40 2024 -0500

    ImageKit image generation now working

commit 4964aaf80d9443a8dbf39e05ba88226b600bff93
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Feb 28 14:53:11 2024 -0500

    imgur support added

commit 4294951dfb5a00947083764bdae5410a2c05c4d4
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Wed Feb 28 14:19:18 2024 -0500

    Added env vars

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/patreon/reconcile",
       "schedule": "0 */12 * * *"
+    },
+    {
+      "path": "/api/cron/imagekit/cleanup",
+      "schedule": "0 */1 * * *"
     }
   ]
 }
