--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,8 @@ CRON_SECRET=""
 DATABASE_URL=""
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+IMAGEKIT_CLIENT_ID=""
+IMAGEKIT_CLIENT_SECRET=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 NEXT_PUBLIC_IMAGE_URL=""
