--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "2.0.0",
     "date-fns": "3.3.1",
     "html2canvas": "1.4.1",
+    "imagekit": "5.0.0",
     "lodash.isequal": "4.5.0",
     "masonic": "3.7.0",
     "next": "14.1.0",
