Squashed commit of the following:
commit 6a9fce6eb09e33b3927b71328d273a85d3c577cf
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Mar 9 17:24:44 2024 -0500

    Updated the webhooks

commit fe75dafd88060de506c83f944cc40c70f785adfd
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Mar 9 15:23:45 2024 -0500

    removed KV cache, added base diff to description

commit 2978dd86a83aea5e6e65db68568879cad3ff82ff
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Mar 9 11:12:19 2024 -0500

    added kv library and env vars

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clipboard-copy": "4.0.1",
     "clsx": "2.0.0",
     "date-fns": "3.3.1",
+    "diff": "5.2.0",
     "html2canvas": "1.4.1",
     "imagekit": "5.0.0",
     "lodash.isequal": "4.5.0",
@@ -49,6 +50,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/bad-words": "3.0.3",
+    "@types/diff": "5.0.9",
     "@types/jest": "29.5.5",
     "@types/lodash.isequal": "4.5.8",
     "@types/mdx": "2.0.10",
