Pushed fix for hot module refresh in Docker container local dev environment

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -49,6 +49,8 @@ services:
     volumes:
       - ./src:/app/src
       - ./public:/app/public
+      - /node_modules
+      - /.next
     restart: always
     ports:
       - 3000:3000
