--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-popper": "2.3.0",
+    "react-string-replace": "1.1.1",
     "react-toastify": "9.1.3",
     "sharp": "0.33.2",
     "usehooks-ts": "2.14.0",
+    "uuid": "9.0.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
@@ -58,6 +60,7 @@
     "@types/papaparse": "5.3.14",
     "@types/react": "18",
     "@types/react-dom": "18",
+    "@types/uuid": "9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "8",
     "eslint-config-next": "14.0.2",
