--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/mdx": "14.0.4",
     "@popperjs/core": "2.11.8",
     "@prisma/client": "5.8.0",
+    "@reduxjs/toolkit": "2.2.2",
     "@tippyjs/react": "4.2.6",
     "@vercel/analytics": "1.1.1",
     "@vercel/speed-insights": "1.0.9",
