Updated script to include optional properties

--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,5 @@ profile.sav
 profile.txt
 UPGRADE.md
 convertedSave.txt
-hitlocation-extractor/*.json
+hitlocation-extractor/**/*.json
+hitlocation-extractor/**/*.csv
