--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.11",
-    "@headlessui/react": "1.7.17",
+    "@headlessui/react": "2.0.0-alpha.4",
     "@heroicons/react": "2.0.18",
     "@mdx-js/loader": "3.0.0",
     "@mdx-js/react": "3.0.0",
@@ -76,7 +76,7 @@
     "prettier-plugin-tailwindcss": "0.5.7",
     "prisma": "5.11.0",
     "tailwind-merge": "2.0.0",
-    "tailwindcss": "3.3.0",
+    "tailwindcss": "3.4.3",
     "ts-node": "10.9.1",
     "typescript": "5.3.2"
   }
