--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watchAll",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "prepare": "husky"
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.11",
@@ -68,6 +69,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "12.0.0",
     "eslint-plugin-testing-library": "6.2.0",
+    "husky": "9.0.11",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "node-xlsx": "0.23.0",
