--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/imagekit/cleanup",
       "schedule": "0 */1 * * *"
+    },
+    {
+      "path": "/api/cron/wiki/validate-wiki-links",
+      "schedule": "0 1 * * 0"
     }
   ]
 }
