Added new icon library

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "patreon": "0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "5.2.1",
     "react-popper": "2.3.0",
     "react-string-replace": "1.1.1",
     "react-toastify": "9.1.3",
