--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,8 @@ PATREON_CREATOR_REFRESH_TOKEN=""
 REDDIT_CLIENT_ID=""
 REDDIT_CLIENT_SECRET=""
 WEBHOOK_BUG_REPORT=""
-WEBHOOK_COMMUNITY_BUILDS=""
+WEBHOOK_MOD_QUEUE=""
+WEBHOOK_AUDIT_LOG=""
 WEBHOOK_CRON_LOGS=""
 WEBHOOK_NEW_BUILD_FEED=""
 WEBHOOK_WIKI_SCRAPER_FEED=""
