--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "2.0.0",
     "date-fns": "3.3.1",
     "diff": "5.2.0",
+    "framer-motion": "11.2.6",
     "html2canvas": "1.4.1",
     "imagekit": "5.0.0",
     "lodash.clonedeep": "4.5.0",
