Initial loadout import process completed

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
 IMAGEKIT_CLIENT_ID=""
 IMAGEKIT_CLIENT_SECRET=""
+LOADOUT_PARSER_URL=""
+LOADOUT_AUTH_TOKEN=""
 MYSQL_DATABASE="r2tkdb"
 MYSQL_USER="r2tkuser"
 MYSQL_PASSWORD=""
