--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
@@ -11,7 +11,9 @@
 /coverage
 
 # next.js
-/.next/
+.next/
+.swc
+.husky
 /out/
 
 # production
@@ -47,3 +49,5 @@ UPGRADE.md
 convertedSave.txt
 /src/scripts/hitlocation-extractor/**/*.json
 /src/scripts/hitlocation-extractor/**/*.csv
+# Turborepo
+.turbo
