--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "typescript": "5.5.2",
-    "prisma": "5.15.0"
+    "@types/node": "20",
+    "prisma": "5.15.0",
+    "typescript": "5.5.2"
   }
 }
