--- a/apps/remnant2toolkit/package.json
+++ b/apps/remnant2toolkit/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
     "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/forms": "0.5.7",
     "@testing-library/jest-dom": "6.1.2",
