--- a/apps/remnant2toolkit/package.json
+++ b/apps/remnant2toolkit/package.json
@@ -58,6 +58,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/ui": "workspace:*",
     "@tailwindcss/forms": "0.5.7",
     "@testing-library/jest-dom": "6.1.2",
     "@testing-library/react": "14.0.0",
@@ -72,7 +73,7 @@
     "@types/react": "18",
     "@types/react-dom": "18",
     "@types/uuid": "9.0.8",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "10.4.18",
     "eslint": "8",
     "eslint-config-next": "14.0.2",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -82,7 +83,7 @@
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "node-xlsx": "0.23.0",
-    "postcss": "8",
+    "postcss": "8.4.35",
     "prettier": "3.1.0",
     "prettier-plugin-tailwindcss": "0.5.7",
     "tailwind-merge": "2.0.0",
