--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^db:generate"],
+      "dependsOn": ["^build", "^db:generate"],
       "inputs": [
         "$TURBO_DEFAULT$",
         ".env.production.local",
@@ -54,6 +54,9 @@
       "cache": false
     },
     "db:push": {
+      "cache": false
+    },
+    "clean": {
       "cache": false
     }
   }
