--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,7 @@
     "./styles.css": "./dist/index.css",
     "./classnames": "./src/classnames.ts",
     "./zindexes": "./src/zindexes.ts",
+    "./logo": "./src/logo.tsx",
     "./base/alert": "./src/base/alert.tsx",
     "./base/avatar": "./src/base/avatar.tsx",
     "./base/badge": "./src/base/badge.tsx",
@@ -26,7 +27,8 @@
     "./base/switch": "./src/base/switch.tsx",
     "./base/table": "./src/base/table.tsx",
     "./base/text": "./src/base/text.tsx",
-    "./base/textarea": "./src/base/textarea.tsx"
+    "./base/textarea": "./src/base/textarea.tsx",
+    "./utils/get-image-url": "./src/utils/get-image-url.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -48,11 +50,12 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "20",
     "@types/react": "^18.2.61",
     "autoprefixer": "10.4.18",
     "postcss": "8.4.35",
-    "tailwindcss": "3.4.3",
     "tailwind-merge": "2.0.0",
+    "tailwindcss": "3.4.3",
     "typescript": "5.5.2"
   }
 }
