Squashed commit of the following:
commit 68802b30fca3533facba6559c7dac191217cfd48
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sun Jun 30 12:05:32 2024 -0400

    Moved remaining utility functions to central location

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,9 +6,14 @@
     "build": "tsc"
   },
   "exports": {
+    "./big-int-fix": "./src/big-int-fix.ts",
     "./capitalize": "./src/capitalize.ts",
+    "./clean-item-name": "./src/clean-item-name.ts",
     "./get-array-of-length": "./src/get-array-of-length.ts",
-    "./strip-unicode": "./src/strip-unicode.ts"
+    "./object-utils": "./src/object-utils.ts",
+    "./strip-unicode": "./src/strip-unicode.ts",
+    "./url-no-cache": "./src/url-no-cache.ts",
+    "./youtube": "./src/youtube.ts"
   },
   "dependencies": {},
   "devDependencies": {
