Squashed commit of the following:
commit 55e7a4d9e44f4e64aa5aad2309f51ac3a7e67ce0
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sun Jun 30 13:23:21 2024 -0400

    Extracted theme logic to centralized component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,8 @@
     "./base/table": "./src/base/table.tsx",
     "./base/text": "./src/base/text.tsx",
     "./base/textarea": "./src/base/textarea.tsx",
+    "./theme/theme-selection": "./src/theme/theme-selection.tsx",
+    "./theme/theme-select-button": "./src/theme/theme-select-button.tsx",
     "./utils/get-image-url": "./src/utils/get-image-url.ts"
   },
   "license": "MIT",
@@ -44,7 +46,9 @@
     "@headlessui/react": "2.0.0-alpha.4",
     "@heroicons/react": "2.0.18",
     "clsx": "2.0.0",
-    "next": "14.2.3"
+    "next": "14.2.3",
+    "next-themes": "0.3.0",
+    "usehooks-ts": "2.14.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
