--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,8 +13,9 @@
     "./constants": "./src/constants.ts",
     "./zindexes": "./src/zindexes.ts",
     "./alert-banner": "./src/alert-banner.tsx",
-    "./discord-icon": "./src/discord-icon.tsx",
+    "./bug-report-prompt": "./src/bug-report/bug-report-prompt.tsx",
     "./footer-container": "./src/footer-container.tsx",
+    "./global-action-buttons": "./src/global-action-buttons.tsx",
     "./logo": "./src/logo.tsx",
     "./navbar-container": "./src/navbar-container.tsx",
     "./preload-resources": "./src/preload-resources.tsx",
@@ -35,6 +36,8 @@
     "./base/table": "./src/base/table.tsx",
     "./base/text": "./src/base/text.tsx",
     "./base/textarea": "./src/base/textarea.tsx",
+    "./icons/changelog": "./src/icons/changelog.tsx",
+    "./icons/discord": "./src/icons/discord.tsx",
     "./theme/theme-selection": "./src/theme/theme-selection.tsx",
     "./theme/theme-select-button": "./src/theme/theme-select-button.tsx",
     "./utils/get-image-url": "./src/utils/get-image-url.ts"
@@ -53,10 +56,12 @@
     "@headlessui/react": "2.0.0-alpha.4",
     "@heroicons/react": "2.0.18",
     "clsx": "2.0.0",
+    "framer-motion": "11.2.6",
     "next": "14.2.3",
     "next-auth": "4.24.7",
     "next-themes": "0.3.0",
     "react-dom": "18.3.1",
+    "react-toastify": "9.1.3",
     "usehooks-ts": "2.14.0"
   },
   "devDependencies": {
