--- a/apps/remnant2toolkit/package.json
+++ b/apps/remnant2toolkit/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
+    "@repo/constants": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
