--- a/apps/hades2toolkit/package.json
+++ b/apps/hades2toolkit/package.json
@@ -1,32 +1,24 @@
 {
-  "name": "remnant2toolkit",
+  "name": "hades2toolkit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "set PORT=3000 && next dev",
+    "dev": "set PORT=3002 && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watchAll",
-    "test:ci": "jest --ci",
-    "app:up": "docker -f docker-compose.dev.yml compose up remnant2-toolkit",
-    "db:up": "docker -f docker-compose.dev.yml compose up db",
-    "report:topitems": "ts-node -r tsconfig-paths/register scripts/top-items-report/report.ts"
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.11",
     "@headlessui/react": "2.0.0-alpha.4",
     "@heroicons/react": "2.0.18",
-    "@mdx-js/loader": "3.0.0",
-    "@mdx-js/react": "3.0.0",
-    "@next/mdx": "14.0.4",
     "@popperjs/core": "2.11.8",
     "@reduxjs/toolkit": "2.2.2",
     "@repo/db": "workspace:*",
     "@tippyjs/react": "4.2.6",
-    "@vercel/analytics": "1.1.1",
     "@vercel/speed-insights": "1.0.9",
-    "cheerio": "1.0.0-rc.12",
     "clipboard-copy": "4.0.1",
     "clsx": "2.0.0",
     "date-fns": "3.3.1",
@@ -68,9 +60,7 @@
     "@types/jest": "29.5.5",
     "@types/lodash.clonedeep": "4.5.9",
     "@types/lodash.isequal": "4.5.8",
-    "@types/mdx": "2.0.10",
     "@types/node": "20",
-    "@types/papaparse": "5.3.14",
     "@types/react": "18",
     "@types/react-dom": "18",
     "@types/uuid": "9.0.8",
