--- a/turbo.json
+++ b/turbo.json
@@ -53,6 +53,9 @@
     "test": {
       "cache": false
     },
+    "test:ci": {
+      "cache": false
+    },
     "db:generate": {
       "cache": false
     },
