Squashed commit of the following:
commit e1035a18259517e393980220c35a075ac3f3797b
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Thu Jul 4 16:19:37 2024 -0400

    Updated docker and localsetup instructions

--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -1,16 +1,12 @@
 # Created by Vercel CLI
 CRON_SECRET=""
-DATABASE_URL="mysql://r2tkuser:{{ PASSWORD HERE }}@db:3306/r2tkdb"
+DATABASE_URL="mysql://forlinauser:{{ PASSWORD HERE }}@localhost:3306/forlinadb"
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
 IMAGEKIT_CLIENT_ID=""
 IMAGEKIT_CLIENT_SECRET=""
 LOADOUT_PARSER_URL=""
 LOADOUT_AUTH_TOKEN=""
-MYSQL_DATABASE="r2tkdb"
-MYSQL_USER="r2tkuser"
-MYSQL_PASSWORD=""
-MYSQL_ROOT_PASSWORD=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 NEXT_PUBLIC_IMAGE_URL="d2sqltdcj8czo5.cloudfront.net"
