--- a/apps/hades2toolkit/package.json
+++ b/apps/hades2toolkit/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.11",
-    "@headlessui/react": "2.0.0-alpha.4",
+    "@headlessui/react": "2.1.2",
     "@heroicons/react": "2.0.18",
     "@popperjs/core": "2.11.8",
     "@reduxjs/toolkit": "2.2.2",
