--- a/apps/remnant2toolkit/package.json
+++ b/apps/remnant2toolkit/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.11",
-    "@headlessui/react": "2.0.0-alpha.4",
+    "@headlessui/react": "2.1.2",
     "@heroicons/react": "2.0.18",
     "@mdx-js/loader": "3.0.0",
     "@mdx-js/react": "3.0.0",
