--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,7 +52,7 @@
     "react": "^18.2.0"
   },
   "dependencies": {
-    "@headlessui/react": "2.0.0-alpha.4",
+    "@headlessui/react": "2.1.2",
     "@heroicons/react": "2.0.18",
     "@repo/constants": "workspace:*",
     "clsx": "2.0.0",
