Squashed commit of the following:
commit 714fe843399803b3f76d953b03c1bda8408c8180
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sun Jul 14 16:45:42 2024 -0400

    Restructured layout folder

commit eaceed4bf320e5fb95d2dc031e39eb1b7cabe264
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sun Jul 14 16:43:22 2024 -0400

    split shared layout into shared component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,7 @@
     "./base/textarea": "./src/base/textarea.tsx",
     "./icons/changelog": "./src/icons/changelog.tsx",
     "./icons/discord": "./src/icons/discord.tsx",
+    "./pages/root-layout": "./src/pages/root-layout.tsx",
     "./theme/theme-selection": "./src/theme/theme-selection.tsx",
     "./theme/theme-select-button": "./src/theme/theme-select-button.tsx",
     "./utils/get-image-url": "./src/utils/get-image-url.ts"
