Squashed commit of the following:
commit 83b892e3e3867fb3b3f35850785fb672141a4a12
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 3 13:12:43 2024 -0400

    Removed prisma.$transaction logic from build queries

commit ad0ea7554ba0aa1eb7e55f4c0bbe8394df835ae6
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 3 13:06:28 2024 -0400

    Incorporated environment variables

--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,7 @@
         "LOADOUT_PARSER_URL",
         "NEXTAUTH_SECRET",
         "NEXTAUTH_URL",
+        "NEXT_PUBLIC_ENABLE_QUALITY_BUILDS",
         "NEXT_PUBLIC_IMAGE_URL",
         "PATREON_CREATOR_ACCESS_TOKEN",
         "PATREON_CREATOR_REFRESH_TOKEN",
