--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -9,6 +9,7 @@ LOADOUT_PARSER_URL=""
 LOADOUT_AUTH_TOKEN=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_ENABLE_QUALITY_BUILDS="true"
 NEXT_PUBLIC_IMAGE_URL="d2sqltdcj8czo5.cloudfront.net"
 PATREON_CREATOR_ACCESS_TOKEN=""
 PATREON_CREATOR_REFRESH_TOKEN=""
