Squashed commit of the following:
commit 2229bb0924f39158253a9c3eea7b0f9d6461ebf9
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 3 16:48:37 2024 -0400

    Finished favorite count milestone script

commit c073f222a495f17f60bc9dda80183bd94fa1f574
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 3 16:24:18 2024 -0400

    Added build count milestones script

--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -19,5 +19,6 @@ WEBHOOK_BUG_REPORT=""
 WEBHOOK_MOD_QUEUE=""
 WEBHOOK_AUDIT_LOG=""
 WEBHOOK_CRON_LOGS=""
+WEBHOOK_MILESTONES=""
 WEBHOOK_NEW_BUILD_FEED=""
 WEBHOOK_WIKI_SCRAPER_FEED=""
