--- a/apps/remnant2toolkit/vercel.json
+++ b/apps/remnant2toolkit/vercel.json
@@ -11,6 +11,14 @@
     {
       "path": "/api/cron/wiki/validate-wiki-links",
       "schedule": "0 1 * * 0"
+    },
+    {
+      "path": "/api/cron/milestones/build-count",
+      "schedule": "0 */2 * * *"
+    },
+    {
+      "path": "/api/cron/milestones/favorite-count",
+      "schedule": "0 */2 * * *"
     }
   ]
 }
