Ran script to reconcile discovered item bugs, updated site language after that

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,4 @@ profile.sav
 profile.txt
 UPGRADE.md
 convertedSave.txt
-/src/scripts/hitlocation-extractor/**/*.json
-/src/scripts/hitlocation-extractor/**/*.csv
+scripts
