Squashed commit of the following:
commit 9b63065a0ec36588f0c96f868f9638a665fc7d00
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 10 14:31:04 2024 -0400

    Update get-favorites-leaderboard.ts

commit d82ecfbf6bee0faa982fcf60a121f2ceaf4101f5
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 10 14:30:37 2024 -0400

    Added top favorites leaderboard

commit 14b77a3df8b9d6bddae5a46463ca7b4e79bfd0f3
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 10 13:24:25 2024 -0400

    extracted leader-board component to reusable ui package

commit b31d8fc49339c2bae012715865c328e5ff20db42
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 10 13:15:12 2024 -0400

    Extracted skeleton component to shared ui package

commit 9d46d7a634f31f3fc7045ef706b2f253237b29d8
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Sat Aug 10 13:08:49 2024 -0400

    Made leader-board more reusable

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,7 @@
     "./navbar-container": "./src/navbar-container.tsx",
     "./preload-resources": "./src/preload-resources.tsx",
     "./session-provider": "./src/session-provider.tsx",
+    "./skeleton": "./src/skeleton.tsx",
     "./base/alert": "./src/base/alert.tsx",
     "./base/avatar": "./src/base/avatar.tsx",
     "./base/badge": "./src/base/badge.tsx",
@@ -82,6 +83,8 @@
     "./icons/theme": "./src/icons/theme.tsx",
     "./icons/trash": "./src/icons/trash.tsx",
     "./icons/video": "./src/icons/video.tsx",
+    "./leader-board/components": "./src/leader-board/components/leader-board.tsx",
+    "./leader-board/types": "./src/leader-board/types/leader-board-item.ts",
     "./pages/root-layout": "./src/pages/root-layout.tsx",
     "./theme/theme-selection": "./src/theme/theme-selection.tsx",
     "./theme/theme-select-button": "./src/theme/theme-select-button.tsx",
@@ -100,6 +103,7 @@
   "dependencies": {
     "@headlessui/react": "2.1.2",
     "@repo/constants": "workspace:*",
+    "@repo/utils": "workspace:*",
     "clsx": "2.1.1",
     "framer-motion": "11.3.2",
     "next": "14.2.3",
