--- a/apps/remnant1toolkit/.env.example
+++ b/apps/remnant1toolkit/.env.example
@@ -9,7 +9,7 @@ LOADOUT_PARSER_URL=""
 LOADOUT_AUTH_TOKEN=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3001"
-NEXT_PUBLIC_IMAGE_URL="d2sqltdcj8czo5.cloudfront.net/remnant1toolkit"
+NEXT_PUBLIC_IMAGE_URL="d2sqltdcj8czo5.cloudfront.net/remnant1"
 PATREON_CREATOR_ACCESS_TOKEN=""
 PATREON_CREATOR_REFRESH_TOKEN=""
 REDDIT_CLIENT_ID=""
