Added notifications feature flag

--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -3,6 +3,7 @@ CRON_SECRET=""
 DATABASE_URL="mysql://forlinauser:{{ PASSWORD HERE }}@localhost:3306/forlinadb"
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+FLAGS_SECRET=""
 IMAGEKIT_CLIENT_ID=""
 IMAGEKIT_CLIENT_SECRET=""
 LOADOUT_PARSER_URL=""
