--- a/apps/remnant2toolkit/package.json
+++ b/apps/remnant2toolkit/package.json
@@ -27,6 +27,7 @@
     "@repo/utils": "workspace:*",
     "@tippyjs/react": "4.2.6",
     "@vercel/analytics": "1.1.1",
+    "@vercel/flags": "^2.6.0",
     "@vercel/speed-insights": "1.0.9",
     "cheerio": "1.0.0-rc.12",
     "clipboard-copy": "4.0.1",
