--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -86,6 +86,7 @@
     "./icons/video": "./src/icons/video.tsx",
     "./leader-board/components": "./src/leader-board/components/leader-board.tsx",
     "./leader-board/types": "./src/leader-board/types/leader-board-item.ts",
+    "./notifications/components/notification-nav-icon": "./src/notifications/components/notification-nav-icon.tsx",
     "./pages/root-layout": "./src/pages/root-layout.tsx",
     "./theme/theme-selection": "./src/theme/theme-selection.tsx",
     "./theme/theme-select-button": "./src/theme/theme-select-button.tsx",
