--- a/turbo.json
+++ b/turbo.json
@@ -29,6 +29,7 @@
         "PATREON_CREATOR_REFRESH_TOKEN",
         "REDDIT_CLIENT_ID",
         "REDDIT_CLIENT_SECRET",
+        "SHOW_NOTIFICATIONS",
         "WEBHOOK_BUG_REPORT",
         "WEBHOOK_MOD_QUEUE",
         "WEBHOOK_AUDIT_LOG",
