--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,9 +9,9 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
+    "build": "tailwindcss -i ./src/common/styles.css -o ./dist/index.css",
     "clean": "rm -rf dist",
-    "dev": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
+    "dev": "tailwindcss -i ./src/common/styles.css -o ./dist/index.css --watch",
     "lint": "eslint src/",
     "test": "jest",
     "typecheck": "tsc --noEmit"
