--- a/apps/remnant3toolkit/package.json
+++ b/apps/remnant3toolkit/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "remnant2toolkit",
+  "name": "remnant3toolkit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watchAll",
-    "test:ci": "jest --ci",
-    "app:up": "docker -f docker-compose.dev.yml compose up remnant2-toolkit",
-    "db:up": "docker -f docker-compose.dev.yml compose up db",
-    "report:topitems": "ts-node -r tsconfig-paths/register scripts/top-items-report/report.ts"
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.11",
