--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -10,7 +10,7 @@ LOADOUT_PARSER_URL=""
 LOADOUT_AUTH_TOKEN=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
-NEXT_PUBLIC_IMAGE_URL="d2sqltdcj8czo5.cloudfront.net"
+NEXT_PUBLIC_IMAGE_URL="d2sqltdcj8czo5.cloudfront.net/remnant2"
 PATREON_CREATOR_ACCESS_TOKEN=""
 PATREON_CREATOR_REFRESH_TOKEN=""
 REDDIT_CLIENT_ID=""
