--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -15,6 +15,7 @@ PATREON_CREATOR_ACCESS_TOKEN=""
 PATREON_CREATOR_REFRESH_TOKEN=""
 REDDIT_CLIENT_ID=""
 REDDIT_CLIENT_SECRET=""
+SHOW_NOTIFICATIONS="false"
 WEBHOOK_BUG_REPORT=""
 WEBHOOK_MOD_QUEUE=""
 WEBHOOK_AUDIT_LOG=""
