[DRAFT] Core notification system implementation
Plenty of rough edges, missing react wiring, lack of tooltips/labels, etc.
Sharing now since dlc3 is around the corner.

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
+    "db:format": "prisma format",
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate"
   },
