Finalized updates to creating and updating builds
Had to rework all the logic to allow for better moderation and usability.

--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -16,6 +16,7 @@ PATREON_CREATOR_REFRESH_TOKEN=""
 REDDIT_CLIENT_ID=""
 REDDIT_CLIENT_SECRET=""
 SHOW_NOTIFICATIONS="false"
+WEBHOOK_DISABLED="true"
 WEBHOOK_BUG_REPORT=""
 WEBHOOK_MOD_QUEUE=""
 WEBHOOK_AUDIT_LOG=""
