--- a/turbo.json
+++ b/turbo.json
@@ -27,6 +27,7 @@
         "REDDIT_CLIENT_ID",
         "REDDIT_CLIENT_SECRET",
         "SHOW_NOTIFICATIONS",
+        "WEBHOOK_DISABLED",
         "WEBHOOK_BUG_REPORT",
         "WEBHOOK_MOD_QUEUE",
         "WEBHOOK_AUDIT_LOG",
