--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "clean": "turbo clean"
+    "clean": "turbo clean",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "9.0.11",
     "prettier": "^3.2.5",
     "turbo": "^2.1.2",
     "typescript": "5.5.2"
