--- a/apps/remnant2toolkit/package.json
+++ b/apps/remnant2toolkit/package.json
@@ -34,6 +34,7 @@
     "date-fns": "3.3.1",
     "diff": "5.2.0",
     "framer-motion": "11.3.2",
+    "he": "^1.2.0",
     "html2canvas": "1.4.1",
     "imagekit": "5.0.0",
     "lodash.clonedeep": "4.5.0",
@@ -65,6 +66,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/diff": "5.0.9",
+    "@types/he": "^1.2.3",
     "@types/jest": "29.5.5",
     "@types/lodash.clonedeep": "4.5.9",
     "@types/lodash.isequal": "4.5.8",
