Added new report

--- a/apps/remnant2toolkit/.env.example
+++ b/apps/remnant2toolkit/.env.example
@@ -23,4 +23,5 @@ WEBHOOK_AUDIT_LOG=""
 WEBHOOK_CRON_LOGS=""
 WEBHOOK_MILESTONES=""
 WEBHOOK_NEW_BUILD_FEED=""
+WEBHOOK_REPORT_DATA=""
 WEBHOOK_WIKI_SCRAPER_FEED=""
