--- a/apps/remnant2toolkit/vercel.json
+++ b/apps/remnant2toolkit/vercel.json
@@ -19,6 +19,10 @@
     {
       "path": "/api/cron/milestones/favorite-count",
       "schedule": "0 */2 * * *"
+    },
+    {
+      "path": "/api/cron/top-items",
+      "schedule": "0 0 1 * *"
     }
   ]
 }
