--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,10 @@
     "preset": "@repo/jest-presets/browser"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "2.1.2",
     "@repo/constants": "workspace:*",
     "@repo/utils": "workspace:*",
@@ -37,7 +41,6 @@
     "next-auth": "4.24.7",
     "next-themes": "0.3.0",
     "react-dom": "18.3.1",
-    "react-icons": "5.2.1",
     "react-toastify": "9.1.3",
     "usehooks-ts": "2.14.0"
   },
@@ -52,9 +55,9 @@
     "@types/react-dom": "18",
     "autoprefixer": "10.4.18",
     "jest": "^29.7.0",
+    "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "postcss": "8.4.35",
     "tailwind-merge": "2.0.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.5.2"
