--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,7 @@
     "@headlessui/react": "2.1.2",
     "@repo/constants": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@tippyjs/react": "4.2.6",
     "clsx": "2.1.1",
     "framer-motion": "11.3.2",
     "next": "14.2.3",
