--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,6 +43,7 @@
     "next-auth": "4.24.7",
     "next-themes": "0.3.0",
     "react-dom": "18.3.1",
+    "react-select": "^5.8.1",
     "react-toastify": "9.1.3",
     "usehooks-ts": "2.14.0"
   },
