--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "clean": "turbo clean",
-    "prepare": "husky"
+    "clean": "turbo clean"
   },
   "devDependencies": {
-    "husky": "9.0.11",
     "prettier": "^3.2.5",
     "turbo": "^2.2.3",
     "typescript": "5.5.2"
