--- a/packages/constants/tsconfig.json
+++ b/packages/constants/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "."
   },
-  "include": ["src"],
+  "include": ["toolkit-config.ts"],
   "exclude": ["node_modules", "dist"]
 }
