--- a/apps/your-gaming-toolkit/package.json
+++ b/apps/your-gaming-toolkit/package.json
@@ -13,28 +13,32 @@
     "db:up": "docker -f docker-compose.dev.yml compose up db"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "framer-motion": "11.3.2",
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
+    "@repo/constants": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
+    "@tailwindcss/forms": "0.5.7",
     "@types/jest": "29.5.5",
-    "@types/node": "^20",
+    "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
     "autoprefixer": "10.4.18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
+    "postcss": "^8",
     "prettier": "3.1.0",
-    "prettier-plugin-tailwindcss": "0.5.7"
+    "prettier-plugin-tailwindcss": "0.5.7",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
