--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -5,9 +5,13 @@
   "exports": {
     ".": "./tailwind.config.ts"
   },
+  "dependencies": {
+    "@nextui-org/react": "^2.4.8"
+  },
   "devDependencies": {
-    "@tailwindcss/forms": "0.5.7",
+    "@types/node": "^20.14.9",
     "@repo/typescript-config": "workspace:*",
-    "tailwindcss": "3.4.3"
+    "tailwindcss": "3.4.3",
+    "@tailwindcss/forms": "0.5.7"
   }
 }
