--- a/apps/your-gaming-toolkit/package.json
+++ b/apps/your-gaming-toolkit/package.json
@@ -13,32 +13,48 @@
     "db:up": "docker -f docker-compose.dev.yml compose up db"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.8",
-    "framer-motion": "11.3.2",
+    "@mantine/carousel": "^7.14.2",
+    "@mantine/charts": "^7.14.2",
+    "@mantine/code-highlight": "^7.14.2",
+    "@mantine/core": "^7.14.2",
+    "@mantine/dates": "^7.14.2",
+    "@mantine/dropzone": "^7.14.2",
+    "@mantine/form": "^7.14.2",
+    "@mantine/hooks": "^7.14.2",
+    "@mantine/modals": "^7.14.2",
+    "@mantine/notifications": "^7.14.2",
+    "@mantine/nprogress": "^7.14.2",
+    "@mantine/spotlight": "^7.14.2",
+    "@mantine/tiptap": "^7.14.2",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
+    "dayjs": "^1.11.13",
+    "embla-carousel-react": "^7.1.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "recharts": "2"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
     "@repo/constants": "workspace:*",
     "@repo/eslint-config": "workspace:*",
-    "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@tailwindcss/forms": "0.5.7",
+    "@repo/ygt-ui": "workspace:*",
     "@types/jest": "29.5.5",
     "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "10.4.18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
-    "postcss": "^8",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "3.1.0",
-    "prettier-plugin-tailwindcss": "0.5.7",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
