--- a/packages/ygt-ui/package.json
+++ b/packages/ygt-ui/package.json
@@ -28,35 +28,52 @@
     "preset": "@repo/jest-presets/browser"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.14.2",
+    "@mantine/charts": "^7.14.2",
+    "@mantine/code-highlight": "^7.14.2",
+    "@mantine/core": "^7.14.2",
+    "@mantine/dates": "^7.14.2",
+    "@mantine/dropzone": "^7.14.2",
+    "@mantine/form": "^7.14.2",
+    "@mantine/hooks": "^7.14.2",
+    "@mantine/modals": "^7.14.2",
+    "@mantine/notifications": "^7.14.2",
+    "@mantine/nprogress": "^7.14.2",
+    "@mantine/spotlight": "^7.14.2",
+    "@mantine/tiptap": "^7.14.2",
     "@repo/constants": "workspace:*",
     "@repo/utils": "workspace:*",
     "@tippyjs/react": "4.2.6",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "clsx": "2.1.1",
-    "framer-motion": "11.3.2",
+    "dayjs": "^1.11.13",
+    "embla-carousel-react": "^7.1.0",
     "next": "14.2.3",
     "next-auth": "4.24.7",
     "next-themes": "0.3.0",
     "react-dom": "18.3.1",
     "react-select": "^5.8.1",
     "react-toastify": "9.1.3",
+    "recharts": "2",
     "usehooks-ts": "2.14.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/jest-presets": "workspace:*",
-    "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/jest": "^29.5.12",
     "@types/node": "20",
     "@types/react": "^18.2.61",
     "@types/react-dom": "18",
-    "autoprefixer": "10.4.18",
     "jest": "^29.7.0",
-    "postcss": "8.4.35",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "2.0.0",
-    "tailwindcss": "3.4.3",
     "typescript": "5.5.2"
   }
 }
