--- a/apps/your-gaming-toolkit/package.json
+++ b/apps/your-gaming-toolkit/package.json
@@ -30,18 +30,19 @@
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
+    "clsx": "2.1.1",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^7.1.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "recharts": "2"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
     "@repo/constants": "workspace:*",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@repo/ygt-eslint-config": "workspace:*",
+    "@repo/ygt-typescript-config": "workspace:*",
     "@repo/ygt-ui": "workspace:*",
     "@types/jest": "29.5.5",
     "@types/node": "^20.14.9",
