--- a/apps/your-gaming-toolkit/tsconfig.json
+++ b/apps/your-gaming-toolkit/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@repo/typescript-config/nextjs.json",
+  "extends": "@repo/ygt-typescript-config/nextjs.json",
   "compilerOptions": {
     "plugins": [
       {
@@ -12,6 +12,13 @@
         "./*"
       ]
     },
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "incremental": true,
+    "resolveJsonModule": true
   },
   "include": [
     "next-env.d.ts",
@@ -20,5 +27,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
