--- a/packages/ygt-typescript-config/package.json
+++ b/packages/ygt-typescript-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ygt-typescript-config",
+  "name": "@ygt/typescript-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
