--- a/packages/ygt-ui/package.json
+++ b/packages/ygt-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ygt-ui",
+  "name": "@ygt/ui",
   "version": "0.0.0",
   "sideEffects": false,
   "exports": {
@@ -20,7 +20,7 @@
     "react": "^18.2.0"
   },
   "jest": {
-    "preset": "@repo/jest-presets/browser"
+    "preset": "@ygt/jest-presets/browser"
   },
   "dependencies": {
     "@mantine/carousel": "^7.14.2",
@@ -36,8 +36,6 @@
     "@mantine/nprogress": "^7.14.2",
     "@mantine/spotlight": "^7.14.2",
     "@mantine/tiptap": "^7.14.2",
-    "@repo/constants": "workspace:*",
-    "@repo/utils": "workspace:*",
     "@tippyjs/react": "4.2.6",
     "@tiptap/extension-link": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
@@ -45,6 +43,7 @@
     "@tiptap/starter-kit": "^2.10.3",
     "clsx": "2.1.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
     "next": "15.0.3",
     "next-themes": "0.3.0",
@@ -55,20 +54,20 @@
     "usehooks-ts": "2.14.0"
   },
   "devDependencies": {
-    "@repo/ygt-eslint-config": "workspace:*",
-    "@repo/jest-presets": "workspace:*",
-    "@repo/ygt-typescript-config": "workspace:*",
     "@types/jest": "^29.5.12",
     "@types/node": "20",
     "@types/react": "^18.2.61",
     "@types/react-dom": "18",
+    "@ygt/eslint-config": "workspace:*",
+    "@ygt/typescript-config": "workspace:*",
+    "@ygt/jest-presets": "workspace:*",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "eslint": "^8.57.0",
     "tsup": "^8.0.2",
     "typescript": "5.5.2"
   }
