Pivoting back to tailwind ui

--- a/packages/ygt-ui/tsconfig.json
+++ b/packages/ygt-ui/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "@ygt/typescript-config/react-library.json",
+  "compilerOptions": {
+    "module": "esnext",
+    "moduleResolution": "Bundler",
+    "lib": ["dom", "ES2015"],
+    "types": ["jest", "node"]
+  },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
