--- a/apps/your-gaming-toolkit/package.json
+++ b/apps/your-gaming-toolkit/package.json
@@ -13,49 +13,30 @@
     "db:up": "docker -f docker-compose.dev.yml compose up db"
   },
   "dependencies": {
-    "@mantine/carousel": "^7.14.2",
-    "@mantine/charts": "^7.14.2",
-    "@mantine/code-highlight": "^7.14.2",
-    "@mantine/core": "^7.14.2",
-    "@mantine/dates": "^7.14.2",
-    "@mantine/dropzone": "^7.14.2",
-    "@mantine/form": "^7.14.2",
-    "@mantine/hooks": "^7.14.2",
-    "@mantine/modals": "^7.14.2",
-    "@mantine/notifications": "^7.14.2",
-    "@mantine/nprogress": "^7.14.2",
-    "@mantine/spotlight": "^7.14.2",
-    "@mantine/tiptap": "^7.14.2",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/pm": "^2.10.3",
-    "@tiptap/react": "^2.10.3",
-    "@tiptap/starter-kit": "^2.10.3",
-    "clsx": "2.1.1",
-    "dayjs": "^1.11.13",
-    "embla-carousel-react": "^7.1.0",
+    "@headlessui/react": "2.2.0",
+    "@heroicons/react": "^2.2.0",
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "recharts": "2"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
-    "@repo/constants": "workspace:*",
     "@ygt/eslint-config": "workspace:*",
+    "@ygt/tailwind-config": "workspace:*",
     "@ygt/typescript-config": "workspace:*",
     "@ygt/ui": "workspace:*",
-    "@types/jest": "29.5.5",
+    "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
     "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "@types/jest": "29.5.5",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "postcss": "^8.4.35",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
     "prettier": "3.1.0",
-    "typescript": "^5"
+    "tailwind-merge": "2.0.0",
+    "tailwindcss": "3.4.15",
+    "typescript": "5.5.2"
   }
 }
