--- a/packages/ygt-tailwind-config/package.json
+++ b/packages/ygt-tailwind-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/tailwind-config",
+  "name": "@ygt/tailwind-config",
   "version": "0.0.0",
   "private": true,
   "exports": {
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
-    "@repo/typescript-config": "workspace:*",
+    "@ygt/typescript-config": "workspace:*",
     "tailwindcss": "3.4.3",
     "@tailwindcss/forms": "0.5.7"
   }
