--- a/packages/ygt-ui/package.json
+++ b/packages/ygt-ui/package.json
@@ -3,18 +3,26 @@
   "version": "0.0.0",
   "sideEffects": false,
   "exports": {
-    "./providers": {
-      "types": "./src/components/providers.tsx",
-      "import": "./dist/providers.mjs",
-      "require": "./dist/providers.js"
+    "./styles.css": "./dist/index.css",
+    "./cn": {
+      "types": "./src/cn.ts",
+      "import": "./dist/cn.js",
+      "require": "./dist/cn.js"
+    },
+    "./root-layout": {
+      "types": "./src/components/root-layout/root-layout.tsx",
+      "import": "./dist/root-layout.js",
+      "require": "./dist/root-layout.js"
     }
   },
   "license": "MIT",
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "lint": "eslint . --max-warnings 0",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
+    "build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
+    "clean": "rm -rf dist",
+    "dev": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
+    "lint": "eslint src/",
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
     "react": "^18.2.0"
@@ -23,34 +31,18 @@
     "preset": "@ygt/jest-presets/browser"
   },
   "dependencies": {
-    "@mantine/carousel": "^7.14.2",
-    "@mantine/charts": "^7.14.2",
-    "@mantine/code-highlight": "^7.14.2",
-    "@mantine/core": "^7.14.2",
-    "@mantine/dates": "^7.14.2",
-    "@mantine/dropzone": "^7.14.2",
-    "@mantine/form": "^7.14.2",
-    "@mantine/hooks": "^7.14.2",
-    "@mantine/modals": "^7.14.2",
-    "@mantine/notifications": "^7.14.2",
-    "@mantine/nprogress": "^7.14.2",
-    "@mantine/spotlight": "^7.14.2",
-    "@mantine/tiptap": "^7.14.2",
+    "@headlessui/react": "2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@tippyjs/react": "4.2.6",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/pm": "^2.10.3",
-    "@tiptap/react": "^2.10.3",
-    "@tiptap/starter-kit": "^2.10.3",
+    "@ygt/utils": "workspace:*",
     "clsx": "2.1.1",
-    "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
-    "embla-carousel-react": "^7.1.0",
-    "next": "15.0.3",
+    "framer-motion": "11.3.2",
+    "next": "14.2.3",
+    "next-auth": "4.24.7",
     "next-themes": "0.3.0",
     "react-dom": "18.3.1",
     "react-select": "^5.8.1",
     "react-toastify": "9.1.3",
-    "recharts": "2",
     "usehooks-ts": "2.14.0"
   },
   "devDependencies": {
@@ -59,16 +51,15 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "18",
     "@ygt/eslint-config": "workspace:*",
-    "@ygt/typescript-config": "workspace:*",
     "@ygt/jest-presets": "workspace:*",
+    "@ygt/typescript-config": "workspace:*",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "postcss": "^8.4.49",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
+    "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsup": "^8.0.2",
+    "tailwind-merge": "2.0.0",
+    "tailwindcss": "3.4.15",
     "typescript": "5.5.2"
   }
 }
