--- a/apps/your-gaming-toolkit/package.json
+++ b/apps/your-gaming-toolkit/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@ygt/toolkits": "workspace:*",
     "@ygt/eslint-config": "workspace:*",
     "@ygt/tailwind-config": "workspace:*",
     "@ygt/typescript-config": "workspace:*",
