--- a/packages/ygt-ui/package.json
+++ b/packages/ygt-ui/package.json
@@ -2,18 +2,14 @@
   "name": "@ygt/ui",
   "version": "0.0.0",
   "sideEffects": false,
+  "files": [
+    "dist"
+  ],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./cn": {
-      "types": "./src/cn.ts",
-      "import": "./dist/cn.js",
-      "require": "./dist/cn.js"
-    },
-    "./root-layout": {
-      "types": "./src/components/root-layout/root-layout.tsx",
-      "import": "./dist/root-layout.js",
-      "require": "./dist/root-layout.js"
-    }
+    "./cn": "./src/cn.ts",
+    "./root-layout": "./src/components/root-layout/root-layout.tsx",
+    "./logo": "./src/components/logo/logo.tsx"
   },
   "license": "MIT",
   "scripts": {
@@ -34,12 +30,14 @@
     "@headlessui/react": "2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tippyjs/react": "4.2.6",
+    "@ygt/toolkits": "workspace:*",
     "@ygt/utils": "workspace:*",
     "clsx": "2.1.1",
     "framer-motion": "11.3.2",
     "next": "14.2.3",
     "next-auth": "4.24.7",
     "next-themes": "0.3.0",
+    "react": "^18.2.0",
     "react-dom": "18.3.1",
     "react-select": "^5.8.1",
     "react-toastify": "9.1.3",
@@ -52,14 +50,14 @@
     "@types/react-dom": "18",
     "@ygt/eslint-config": "workspace:*",
     "@ygt/jest-presets": "workspace:*",
+    "@ygt/tailwind-config": "workspace:*",
     "@ygt/typescript-config": "workspace:*",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "postcss": "8.4.35",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "tailwind-merge": "2.0.0",
     "tailwindcss": "3.4.15",
+    "@tailwindcss/forms": "0.5.7",
     "typescript": "5.5.2"
   }
 }
