--- a/apps/your-gaming-toolkit/tsconfig.json
+++ b/apps/your-gaming-toolkit/tsconfig.json
@@ -18,7 +18,8 @@
       "esnext"
     ],
     "incremental": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
