--- a/packages/ygt-ui/package.json
+++ b/packages/ygt-ui/package.json
@@ -34,10 +34,10 @@
     "@ygt/utils": "workspace:*",
     "clsx": "2.1.1",
     "framer-motion": "11.3.2",
-    "next": "14.2.3",
+    "next": "15.0.3",
     "next-auth": "4.24.7",
     "next-themes": "0.3.0",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-select": "^5.8.1",
     "react-toastify": "9.1.3",
