--- a/apps/your-gaming-toolkit/package.json
+++ b/apps/your-gaming-toolkit/package.json
@@ -3,41 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3005",
+    "dev": "next dev -p 3005 --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watchAll",
-    "test:ci": "jest --ci",
-    "app:up": "docker -f docker-compose.dev.yml compose up remnant2-toolkit",
-    "db:up": "docker -f docker-compose.dev.yml compose up db"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "2.2.0",
-    "@heroicons/react": "^2.2.0",
-    "next": "15.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@ygt/ui": "workspace:*",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "15.0.3"
   },
   "devDependencies": {
-    "@prisma/nextjs-monorepo-workaround-plugin": "5.15.0",
-    "@types/jest": "29.5.5",
-    "@types/node": "^20.14.9",
+    "@ygt/tailwind-config": "workspace:*",
+    "@ygt/typescript-config": "workspace:*",
+    "typescript": "^5",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@ygt/eslint-config": "workspace:*",
-    "@ygt/tailwind-config": "workspace:*",
-    "@ygt/toolkits": "workspace:*",
-    "@ygt/typescript-config": "workspace:*",
-    "@ygt/ui": "workspace:*",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "jest": "29.6.4",
-    "jest-environment-jsdom": "29.6.4",
-    "postcss": "^8.4.35",
-    "prettier": "3.1.0",
-    "tailwind-merge": "2.0.0",
-    "tailwindcss": "3.4.15",
-    "typescript": "5.5.2"
+    "eslint-config-next": "15.0.3"
   }
 }
