--- a/apps/remnant2toolkit/package.json
+++ b/apps/remnant2toolkit/package.json
@@ -14,6 +14,7 @@
     "report:topitems": "ts-node -r tsconfig-paths/register scripts/top-items-report/report.ts"
   },
   "dependencies": {
+    "@ygt/toolkits": "workspace:*",
     "@auth/prisma-adapter": "1.0.11",
     "@headlessui/react": "2.1.2",
     "@mdx-js/loader": "3.0.0",
