--- a/packages/ygt-utils/package.json
+++ b/packages/ygt-utils/package.json
@@ -18,7 +18,7 @@
   "dependencies": {},
   "devDependencies": {
     "@ygt/eslint-config": "workspace:*",
-    "@ygt/jest-presets": "workspace:*",
+    "@ygt/jest-config": "workspace:*",
     "@ygt/typescript-config": "workspace:*",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
